# Meteoric

./: .gitattributes  .gitignore  .prettierrc.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  angular.json  deno.json  package-lock.json  package.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: release.yml
extensions_src/libraries_extensions/steam/: extension.rs  info.yml
extensions_src/libraries_extensions/steam/src/: lib.rs
extensions_src/metadata_extensions/IGDB/: Cargo.toml
extensions_src/metadata_extensions/IGDB/src/: lib.rs
extensions_src/metadata_extensions/YT_BG/: Cargo.toml
extensions_src/metadata_extensions/YT_BG/src/: lib.rs
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  file_operations.rs  main.rs  metadata_api.rs  plugins.rs  tauri_commander.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/test/: mod.rs
src-tauri/src/file_operations/: mod.rs
src-tauri/src/file_operations/test/: mod.rs
src-tauri/src/libraries_extensions/steam/: Cargo.toml
src-tauri/src/plugins/: epic_importer.rs  gog_importer.rs  igdb.rs  steam_grid.rs  steam_importer.rs  ytdl.rs
src-tauri/src/plugins/epic_importer/: mod.rs
src-tauri/src/plugins/epic_importer/test/: mod.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
src/app/Components/add-game-overlay/: add-game-overlay.component.css  add-game-overlay.component.html  add-game-overlay.component.spec.ts  add-game-overlay.component.ts
src/app/Components/blocking-overlay/: blocking-overlay.component.css  blocking-overlay.component.html  blocking-overlay.component.ts
src/app/Components/card/: card.component.css  card.component.html  card.component.spec.ts  card.component.ts
src/app/Components/card-list/: card-list.component.css  card-list.component.html  card-list.component.spec.ts  card-list.component.ts
src/app/Components/details/: details.component.css  details.component.html  details.component.spec.ts  details.component.ts
src/app/Components/displaymanager/: displaymanager.component.html  displaymanager.component.ts
src/app/Components/edit-game/: edit-game.component.css  edit-game.component.html  edit-game.component.ts
src/app/Components/filter-overlay/: filter-overlay.component.html  filter-overlay.component.spec.ts  filter-overlay.component.ts
src/app/Components/loading-bar/: loading-bar.component.css  loading-bar.component.html  loading-bar.component.ts
src/app/Components/settings-overlay/: settings-overlay.component.css  settings-overlay.component.html  settings-overlay.component.ts
src/app/Components/sidebar/: sidebar.component.css  sidebar.component.html  sidebar.component.spec.ts  sidebar.component.ts
src/app/Components/splash/: splash.component.css  splash.component.html  splash.component.spec.ts  splash.component.ts
src/app/Components/topbar/: topbar.component.css  topbar.component.html  topbar.component.spec.ts  topbar.component.ts
src/app/components/achievement/: achievement.component.css  achievement.component.html  achievement.component.ts
src/app/components/achievements/: achievements.component.css  achievements.component.html  achievements.component.ts
src/app/components/add-game-overlay/: add-game-overlay.component.ts
src/app/components/blocking-overlay/: blocking-overlay.component.html
src/app/components/card/: card.component.css
src/app/components/details/: details.component.css  details.component.html  details.component.ts
src/app/components/displaymanager/: displaymanager.component.html  displaymanager.component.ts
src/app/components/edit-game/: edit-game.component.css  edit-game.component.html  edit-game.component.ts
src/app/components/filter-overlay/: filter-overlay.component.html  filter-overlay.component.ts
src/app/components/info-card/: info-card.component.css  info-card.component.html  info-card.component.ts
src/app/components/settings-overlay/: settings-overlay.component.css  settings-overlay.component.html  (+1 more)
src/app/i18n/: de.json  dev.json  en.json  es.json  fr.json  it.json
src/app/plugins/: IPlugin.ts
src/app/services/: category.service.ts  db.service.spec.ts  db.service.ts  game-service.service.spec.ts  game.service.ts  generic.service.spec.ts  generic.service.ts  settings.service.ts  tauri.service.ts
src/interfaces/: ICategory.ts  IGame.ts  IGameLaunchMessage.ts  ISettings.ts
(+52 files in other folders)
