[package]
name = "UniverseCollector"
version = "0.0.1"
description = "Collects all your games in one place"
authors = ["Nytuo"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-fullscreen", "os-all", "path-all", "protocol-asset", "shell-open"] }
serde = { version = "1", features = ["derive"] }
rusqlite = {version = "0.31.0", features = ["bundled"] }
directories = "5.0.1"
serde_json = "1.0.116"
serde_derive = "1.0.198"
libloading = "0.8.3"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
reqwest = "0.12.4"
rusty_dl = "1.0.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
