[package]
name = "Meteoric"
version = "0.0.1"
description = "Collects all your games in one place"
authors = ["Nytuo"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-save", "dialog-open", "window-set-fullscreen", "os-all", "path-all", "protocol-asset", "shell-open", "devtools"] }
serde = { version = "1", features = ["derive"] }
rusqlite = {version = "0.32.1", features = ["bundled"] }
directories = "5.0.1"
serde_json = "1.0.116"
serde_derive = "1.0.198"
libloading = "0.8.3"
tokio = { version = "1.39.2", features = ["full"] }
lazy_static = "1.4.0"
reqwest =  { version = "0.12.4", features = ["json"] }
rusty_ytdl = { git = "https://github.com/Mithronn/rusty_ytdl" }
chrono = "0.4.38"
scraper = "0.20.0"
regex = "1.10.4"
dotenv = "0.15.0"
steamgriddb_api="0.3.1"
egs-api="0.7.1"
steam-rs="0.4.4"
gog="0.5.0"
csv = "1.3.0"

[dev-dependencies]
tempfile = "3.5.0"
grcov="0.8.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
