[package]
name = "uc_ytbg"
version = "0.1.0"
edition = "2021"
description = "A simple youtube background downloader"

[lib]
crate-type = ["cdylib"]
name = "uc_ytbg"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.116"
serde_derive = "1.0.198"
tokio = { version = "1", features = ["full"] }
scraper = "0.19.0"
regex = "1.10.4"